--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -33,6 +33,24 @@
     height: 550px;
 }
 
+.slider{
+    margin: 0 auto;
+    width: 800px;
+    height: 400px;
+    overflow: hidden;
+
+}
+
+.slides{
+    width: 400%;
+    height: 400px;
+    display: flex;
+}
+
+.slides input{
+    display: none;
+}
+
 /*João*/
 
 #joao {
