QUASE ESQUECIDO COMMIT OMAGAAAA

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -51,6 +51,48 @@
     display: none;
 }
 
+
+.slide{
+    width: 25%;
+    position: relative
+}
+
+.slide img{
+    width: 500px;
+    height: 500px;
+}
+
+.manual-navigation{
+    position: absolute;
+    width: 800px;
+    margin-top: -40px;
+    display: flex;
+    justify-content: center;
+}
+
+.manual-btn{
+    border: 2px solid#FFF;
+    padding: 5px;
+    border-radius: 10px;
+    cursor: pointer;
+    transition: 1s;
+}
+
+.manual-btn:not(:last-child){
+    margin-right: 40px;
+}
+
+.manual-btn:hover{
+    background-color: #FFF;
+}
+
+#radio1:checked ~ .first{
+    margin-left: 0;
+}
+
+#radio2:checked ~ .first{
+    margin-left: -25%;
+}
 /*João*/
 
 #joao {
