--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -93,6 +93,13 @@
 #radio2:checked ~ .first{
     margin-left: -25%;
 }
+
+#radio3:checked ~ .first{
+    margin-left: -50%;
+}
+
+
+
 /*João*/
 
 #joao {
