--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -46,7 +46,7 @@
 footer {
     background-color: black;
     width: 100%;
-    height: 400px;
+    height: 550px;
 }
 #ca{
     margin-left:  40px;
@@ -74,11 +74,10 @@ footer {
     width: 60px;
     margin-left: 50px;
     border-radius: 79pc;
-
-  
 }
-#riri{
-   margin-left: 70px;
+#riri a{
+    text-decoration: none;
+   color: white;
 }
 #oo h2{
     margin-left: 500px;
@@ -88,4 +87,26 @@ footer {
  display: block;
  color: aliceblue;
  margin-left: 200px;
+}
+#popl a{
+    color: white;
+    text-decoration: none;
+
+}
+#riri{
+    margin-left: 400px;
+}
+#popl{
+    margin-left: 560px;
+}
+#rt img{
+    width: 120px;
+    height: 120px;
+    margin-left: 595px;
+}
+#popl a:hover{
+    text-decoration: underline;
+}
+#riri a:hover{
+    text-decoration: underline;
 }
