--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -120,7 +120,7 @@ body {
 }
 
 
-#piqueno{
+.piqueno{
     border: 0px solid red;
     
 }
@@ -229,8 +229,12 @@ body {
     text-decoration: none;
     text-align: center;
     font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-
+    color: #FFF;
+    display: inline-block;
+    border: 5px solid rgb(0, 0, 0); background-color: rgb(0, 0, 0);
 }
+
+
 
 
 
